upgrade to i2p 0.9.47, switch to json.org library to prevent library clash with i2p changes, i2p-zero version 1.18 release